html updated with correct text

--- a/index - Copy.html
+++ b/index - Copy.html
@@ -8,67 +8,67 @@
 	<div id="timeline">
 		<ul id="dates">
 			<li><a href="#1" class="selected">2000</a></li>
-			<!--li><a href="#2">2000</a></li-->
-			<!--li><a href="#3">2002</a></li-->
-			<!--li><a href="#4">2003</a></li-->
-			<!--li><a href="#5">2004</a></li-->
+			<li><a href="#2">2000</a></li>
+			<li><a href="#3">2002</a></li>
+			<li><a href="#4">2003</a></li>
+			<li><a href="#5">2004</a></li>
 			<li><a href="#6">2005</a></li>
 			<li><a href="#7">2006</a></li>
 			<li><a href="#8">2006</a></li>
-			<!--li><a href="#9">2006</a></li-->
-			<!--li><a href="#10">2006</a></li-->
-			<!--li><a href="#11">2006</a></li-->
-			<!--li><a href="#12">2006</a></li-->
+			<li><a href="#9">2006</a></li>
+			<li><a href="#10">2006</a></li>
+			<li><a href="#11">2006</a></li>
+			<li><a href="#12">2006</a></li>
 			<li><a href="#13">2007</a></li>
-			<!--li><a href="#14">2008</a></li-->
-			<!--li><a href="#15">2008</a></li-->
-			<!--li><a href="#16">2008</a></li-->
-			<!--li><a href="#17">2008</a></li-->
+			<li><a href="#14">2008</a></li>
+			<li><a href="#15">2008</a></li>
+			<li><a href="#16">2008</a></li>
+			<li><a href="#17">2008</a></li>
 			<li><a href="#18">2008</a></li>
-			<!--li><a href="#19">2008</a></li-->
-			<!--li><a href="#20">2008</a></li-->
-			<!--li><a href="#21">2009</a></li-->
+			<li><a href="#19">2008</a></li>
+			<li><a href="#20">2008</a></li>
+			<li><a href="#21">2009</a></li>
 			<li><a href="#22">2009</a></li>
-			<!--li><a href="#23">2010</a></li-->
-			<!--li><a href="#24">2010</a></li-->
-			<!--li><a href="#25">2010</a></li-->
+			<li><a href="#23">2010</a></li>
+			<li><a href="#24">2010</a></li>
+			<li><a href="#25">2010</a></li>
 			<li><a href="#26">2010</a></li>
 			<li><a href="#27">2010</a></li>
-			<!--li><a href="#28">2010</a></li-->
+			<li><a href="#28">2010</a></li>
 			<li><a href="#29">2010</a></li>
 			<li><a href="#30">2011</a></li>
-			<!--li><a href="#31">2011</a></li-->
+			<li><a href="#31">2011</a></li>
 			<li><a href="#32">2011</a></li>
-			<!--li><a href="#33">2011</a></li-->
+			<li><a href="#33">2011</a></li>
 			<li><a href="#34">2012</a></li>
-			<!--li><a href="#35">2012</a></li-->
-			<!--li><a href="#36">2012</a></li-->
-			<!--li><a href="#37">2012</a></li-->
-			<!--li><a href="#38">2012</a></li-->
-			<!--li><a href="#39">2012</a></li-->
-			<!--li><a href="#40">2012</a></li-->
-			<!--li><a href="#41">2012</a></li-->
-			<!--li><a href="#42">2012</a></li-->
+			<li><a href="#35">2012</a></li>
+			<li><a href="#36">2012</a></li>
+			<li><a href="#37">2012</a></li>
+			<li><a href="#38">2012</a></li>
+			<li><a href="#39">2012</a></li>
+			<li><a href="#40">2012</a></li>
+			<li><a href="#41">2012</a></li>
+			<li><a href="#42">2012</a></li>
 			<li><a href="#43">2012</a></li>
-			<!--li><a href="#44">2013</a></li-->
-			<!--li><a href="#45">2013</a></li-->
-			<!--li><a href="#46">2013</a></li-->
+			<li><a href="#44">2013</a></li>
+			<li><a href="#45">2013</a></li>
+			<li><a href="#46">2013</a></li>
 			<li><a href="#47">2014</a></li>
 			<li><a href="#48">2014</a></li>
-			<!--li><a href="#49">2014</a></li-->
-			<!--li><a href="#50">2014</a></li-->
-			<!--li><a href="#51">2014</a></li-->
-			<!--li><a href="#52">2014</a></li-->
+			<li><a href="#49">2014</a></li>
+			<li><a href="#50">2014</a></li>
+			<li><a href="#51">2014</a></li>
+			<li><a href="#52">2014</a></li>
 			<li><a href="#53">2014</a></li>
-			<!--li><a href="#54">2015</a></li-->
-			<!--li><a href="#55">2016</a></li-->
-			<!--li><a href="#56">2017</a></li-->
+			<li><a href="#54">2015</a></li>
+			<li><a href="#55">2016</a></li>
+			<li><a href="#56">2017</a></li>
 			<li><a href="#57">2017</a></li>
-			<!--li><a href="#58">2018</a></li-->
-			<!--li><a href="#59">2018</a></li-->
+			<li><a href="#58">2018</a></li>
+			<li><a href="#59">2018</a></li>
 			<li><a href="#60">2019</a></li>
 			<li><a href="#61">2020</a></li>
-			<!--li><a href="#62">2020</a></li-->
+			<li><a href="#62">2020</a></li>
 		</ul>
 		<ul id="issues">
 			<li id="1" class="selected">
@@ -77,372 +77,372 @@
 				<p>Recognize three words out of of seven selected randomly from a dictionary</p>
 				<img src="asset\2000_2Dt_GIMPY.png" />
 			</li>
-			<!--li id="2">
+			<li id="2">
 				<h2>Text 2D</h2>
 				<h1>EZ-GIMPY</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2000_2Dt_EZ-GIMPY.png" />
-			</li-->
-			<!--li id="3">
+			</li>
+			<li id="3">
 				<h2>Text 2D</h2>
 				<h1>Microsoft</h1>
 				<p>Recognize eight distorted characters presented with random arcs as clutters.</p>
 				<img src="asset\2002_2Dt_Microsoft.png" />
-			</li-->
-			<!--li id="4">
+			</li>
+			<li id="4">
 				<h2>Text 2D</h2>
 				<h1>Baffle text</h1>
 				<p>Recognize a pronounceable string of characters with difference masking applied.</p>
 				<img src="asset\2003_2Dt_Baffle text.png" />
-			</li-->
-			<!--li id="5">
+			</li>
+			<li id="5">
 				<h2>Text 2D</h2>
 				<h1>Handwritten</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2004_2Dt_Handwritten.png" />
-			</li-->
+			</li>
 			<li id="6">
 				<h2>Image - Click</h2>
 				<h1>Implicit CAPTCHA</h1>
-				<p>Click on a specific area of an image (e.g.,mountain top)</p>
+				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2005_Ci_Implicit CAPTCHA.png" />
 			</li>
 			<li id="7">
 				<h2>Text 2D</h2>
 				<h1>Google</h1>
-				<p>Recognize characters which are crowded together</p>
+				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2006_2Dt_Google.png" />
 			</li>
 			<li id="8">
 				<h2>Text 3D</h2>
 				<h1>3DCAPTCHA</h1>
-				<p>Recognize a sequence of 3D characters</p>
+				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2006_3Dt_3DCAPTCHA.png" />
 			</li>
-			<!--li id="9">
+			<li id="9">
 				<h2>Text 3D</h2>
 				<h1>Teabag 3D</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2006_3Dt_Teabag 3D.png" />
-			</li-->
-			<!--li id="10">
+			</li>
+			<li id="10">
 				<h2>Text - Animated</h2>
 				<h1>Dracon CAPTCHA</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2006_At_Dracon CAPTCHA.png" />
-			</li-->
-			<!--li id="11">
+			</li>
+			<li id="11">
 				<h2>Image - Draw</h2>
 				<h1>Drawing CAPTCHA</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2006_Di_Drawing CAPTCHA.png" />
-			</li-->
-			<!--li id="12">
+			</li>
+			<li id="12">
 				<h2>Image - Select</h2>
 				<h1>HumanAuth</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2006_Si_HumanAuth.png" />
-			</li-->
+			</li>
 			<li id="13">
 				<h2>Image - Select</h2>
 				<h1>Asirra</h1>
-				<p>Select cats from a set of 12 images of cats and dogs</p>
+				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2007_Si_Asirra.png" />
 			</li>
-			<!--li id="14">
+			<li id="14">
 				<h2>Text 2D</h2>
 				<h1>Clickable CAPTCHA</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2008_2Dt_Clickable CAPTCHA.png" />
-			</li-->
-			<!--li id="15">
+			</li>
+			<li id="15">
 				<h2>Text 2D</h2>
 				<h1>ReCaptcha V1</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2008_2Dt_ReCaptcha V1.png" />
-			</li-->
-			<!--li id="16">
+			</li>
+			<li id="16">
 				<h2>Text 2D</h2>
 				<h1>Yahoo</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2008_2Dt_Yahoo.png" />
-			</li-->
-			<!--li id="17">
+			</li>
+			<li id="17">
 				<h2>Text - Animated</h2>
 				<h1>NuCaptcha</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2008_At_NuCaptcha.png" />
-			</li-->
+			</li>
 			<li id="18">
 				<h2>Math</h2>
 				<h1>Arithmetic CAPTCHA</h1>
-				<p>Enter the result of the math operation</p>
+				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2008_m_Arithmetic CAPTCHA.png" />
 			</li>
-			<!--li id="19">
+			<li id="19">
 				<h2>Math</h2>
 				<h1>QRBGS CAPTCHA</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2008_m_QRBGS CAPTCHA.png" />
-			</li-->
-			<!--li id="20">
+			</li>
+			<li id="20">
 				<h2>Video</h2>
 				<h1>Motion captcha</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2008_v_Motion captcha.png" />
-			</li-->
-			<!--li id="21">
+			</li>
+			<li id="21">
 				<h2>Image - Slider</h2>
 				<h1>WHAT’S UP</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2009_Sli_WHAT’S UP CAPTCHA.png" />
-			</li-->
+			</li>
 			<li id="22">
 				<h2>TVideo</h2>
 				<h1>Kluever el al</h1>
-				<p>Watch a video and provide three words that best describe the video</p>
+				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2009_v_Kluever el al.png" />
 			</li>
-			<!--li id="23">
+			<li id="23">
 				<h2>Text 2D</h2>
 				<h1>MegaUpload</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2010_2Dt_MegaUpload.png" />
-			</li-->
-			<!--li id="24">
+			</li>
+			<li id="24">
 				<h2>Text - Animated</h2>
 				<h1>HelloCAPTCHA</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2010_At_HelloCAPTCHA.png" />
-			</li-->
-			<!--li id="25">
+			</li>
+			<li id="25">
 				<h2>Image - Drag & Drop</h2>
 				<h1>Gao et al</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2010_Di_Gao et al.png" />
-			</li-->
+			</li>
 			<li id="26">
 				<h2>Image -Drag & Drop</h2>
 				<h1>KeyCAPTCHA</h1>
-				<p>Drag three puzzle pieces to assemble the image</p>
+				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2010_Di_KeyCAPTCHA.png" />
 			</li>
 			<li id="27">
 				<h2>Game</h2>
 				<h1>Dice CAPTCHA</h1>
-				<p>Click on “Roll” to roll the dices, then enter the sum of the numbers appearing on the dices</p>
+				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2010_g_Dice CAPTCHA.png" />
 			</li>
-			<!--li id="28">
+			<li id="28">
 				<h2>Slider</h2>
 				<h1>Taobao</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2010_s_Taobao.png" />
-			</li-->
+			</li>
 			<li id="29">
 				<h2>Slider</h2>
 				<h1>TheyMakeApps</h1>
-				<p>Move the slider to the end of the line</p>
+				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2010_s_TheyMakeApps.png" />
 			</li>
 			<li id="30">
 				<h2>Image - Draw</h2>
 				<h1>MotionCAPTCHA</h1>
-				<p>Draw a shape displayed in a box</p>
+				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2011_Di_MotionCAPTCHA.png" />
 			</li>
-			<!--li id="31">
+			<li id="31">
 				<h2>Game</h2>
 				<h1>SweetCAPTCHA</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2011_g_SweetCAPTCHA.png" />
-			</li-->
+			</li>
 			<li id="32">
 				<h2>Game</h2>
 				<h1>Tic tac toe</h1>
-				<p>Complete the game by tapping into the correct position to get a line of 3 Xs (or Os)</p>
+				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2011_g_Tic tac toe CAPTCHA.png" />
 			</li>
-			<!--li id="33">
+			<li id="33">
 				<h2>Image - Select</h2>
 				<h1>SEMAGE</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2011_Si_SEMAGE.png" />
-			</li-->
+			</li>
 			<li id="34">
 				<h2>Text - Animated</h2>
 				<h1>Atlantis</h1>
-				<p>Recognize six moving characters among other continuously changing their color</p>
+				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2012_At_Atlantis CAPTCHA.png" />
 			</li>
-			<!--li id="35">
+			<li id="35">
 				<h2>Text - Animated</h2>
 				<h1>KillBot</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2012_At_KillBot.png" />
-			</li-->
-			<!--li id="36">
+			</li>
+			<li id="36">
 				<h2>Behaviour</h2>
 				<h1>GEETest</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2012_b_GEETest.png" />
-			</li-->
-			<!--li id="37">
+			</li>
+			<li id="37">
 				<h2>Behaviour</h2>
 				<h1>Netease</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2012_b_Netease.png" />
-			</li-->
-			<!--li id="38">
+			</li>
+			<li id="38">
 				<h2>Image - Drag & Drop</h2>
 				<h1>Capy CAPTCHA</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2012_Di_Capy CAPTCHA.png" />
-			</li-->
-			<!--li id="39">
+			</li>
+			<li id="39">
 				<h2>Game</h2>
 				<h1>PlayThru</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2012_g_PlayThru.png" />
-			</li-->
-			<!--li id="40">
+			</li>
+			<li id="40">
 				<h2>Image - Interactive</h2>
 				<h1>Noise CAPTCHA</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2012_Ii_Noise CAPTCHA.png" />
-			</li-->
-			<!--li id="41">
+			</li>
+			<li id="41">
 				<h2>Image - Selection</h2>
 				<h1>AVATAR</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2012_Si_AVATAR.png" />
-			</li-->
-			<!--li id="42">
+			</li>
+			<li id="42">
 				<h2>Image - Slider</h2>
 				<h1>MintEye</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2012_Sli_MintEye CAPTCHA.png" />
-			</li-->
+			</li>
 			<li id="43">
 				<h2>Image - Slider</h2>
 				<h1>Tencent</h1>
-				<p>Drag the slider until two puzzle pieces match.</p>
+				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2012_Sli_Tencent.png" />
 			</li>
-			<!--li id="44">
+			<li id="44">
 				<h2>Text 3D</h2>
 				<h1>Super CAPTCHA</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2013_3Dt_Super CAPTCHA.png" />
-			</li-->
-			<!--li id="45">
+			</li>
+			<li id="45">
 				<h2>Image - Drag & Drop</h2>
 				<h1>Garb CAPTCHA</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2013_Di_Garb CAPTCHA.png" />
-			</li-->
-			<!--li id="46">
+			</li>
+			<li id="46">
 				<h2>Image - Interactive</h2>
 				<h1>Cursor CAPTCHA</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2013_Ii_Cursor CAPTCHA.png" />
-			</li-->
+			</li>
 			<li id="47">
 				<h2>Behaviour</h2>
 				<h1>reCAPTCHA</h1>
-				<p>Click on I’m not a robot Checkbox</p>
+				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2014_b_reCAPTCHA.png" />
 			</li>
 			<li id="48">
 				<h2>Image - Drag & Drop</h2>
 				<h1>Hamid Ali et al</h1>
-				<p>Drag and drop four images to an empty grid matching reference image.</p>
+				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2014_Di_Hamid Ali et al.png" />
 			</li>
-			<!--li id="49">
+			<li id="49">
 				<h2>Game</h2>
 				<h1>DCG CAPTCHA</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2014_g_DCG CAPTCHAs.png" />
-			</li-->
-			<!--li id="50">
+			</li>
+			<li id="50">
 				<h2>Image - Select</h2>
 				<h1>Facebook</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2014_Si_Facebook image CAPTCHA.png" />
-			</li-->
-			<!--li id="51">
+			</li>
+			<li id="51">
 				<h2>Image - Select</h2>
 				<h1>FaceDCAPTCHA</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2014_Si_FaceDCAPTCHA.png" />
-			</li-->
-			<!--li id="52">
+			</li>
+			<li id="52">
 				<h2>Image - Select</h2>
 				<h1>FR-CAPTCHA</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2014_Si_FR-CAPTCHA.png" />
-			</li-->
+			</li>
 			<li id="53">
 				<h2>Image - Select</h2>
 				<h1>reCAPTCHA</h1>
-				<p>Select all images with street signs, cars or some specific object.</p>
+				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2014_Si_reCAPTCHA.png" />
 			</li>
-			<!--li id="54">
+			<li id="54">
 				<h2>Image - Interactive</h2>
 				<h1>CAPTCHAStar</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2015_Ii_CAPTCHAStar.png" />
-			</li-->
-			<!--li id="55">
+			</li>
+			<li id="55">
 				<h2>Behaviour</h2>
 				<h1>Gametrics</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2016_b_Gametrics.png" />
-			</li-->
-			<!--li id="56">
+			</li>
+			<li id="56">
 				<h2>Behaviour</h2>
 				<h1>Eye-CAPTCHA</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2017_b_Eye-CAPTCHA.png" />
-			</li-->
+			</li>
 			<li id="57">
 				<h2>Behaviour</h2>
 				<h1>Invisible reCAPTCHA</h1>
-				<p>No visible challenge, it is invoked via a Javascript API or on click of a button</p>
+				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2017_b_Invisible reCAPTCHA.png" />
 			</li>
-			<!--li id="58">
+			<li id="58">
 				<h2>Image - Click</h2>
 				<h1>SACaptcha</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2018_Ci_SACaptcha.png" />
-			</li-->
-			<!--li id="59">
+			</li>
+			<li id="59">
 				<h2>Image - Draw</h2>
 				<h1>VAPTCHA</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2018_Di_VAPTCHA.png" />
-			</li-->
+			</li>
 			<li id="60">
 				<h2>Text 3D</h2>
 				<h1>DotCHA</h1>
-				<p>Drag and rotate the model to identify each letter</p>
+				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2019_3Dt_DotCHA.png" />
 			</li>
 			<li id="61">
 				<h2>Behaviour</h2>
 				<h1>Be-CAPTCHA</h1>
-				<p>Drag a slider from the start to the end of the sliding bar</p>
+				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2020_b_Be-CAPTCHA.png" />
 			</li>
-			<!--li id="62">
+			<li id="62">
 				<h2>Behaviour</h2>
 				<h1>BeCAPTCHA-Mouse</h1>
 				<p>Recognize one English word in a distorted image</p>
 				<img src="asset\2020_b_BeCAPTCHA-Mouse.png" />
-			</li-->
+			</li>
 
 		</ul>
 		<div id="grad_top"></div>
