--- a/index.html
+++ b/index.html
@@ -432,9 +432,9 @@
 				<img src="asset\2019_3Dt_DotCHA.png" />
 			</li>
 			<li id="61">
-				<h2>Behaviour</h2>
-				<h1>Be-CAPTCHA</h1>
-				<p>Drag a slider from the start to the end of the sliding bar</p>
+				<h2>Sensor</h2>
+				<h1>SenCAPTCHA</h1>
+				<p>Identify the animal eye position,then tilt the device to move the ball to this position.</p>
 				<img src="asset\2020_b_Be-CAPTCHA.png" />
 			</li>
 			<!--li id="62">
